# trash_render

./: .gitignore  CMakeLists.txt  Untitled Diagram.drawio
src/: CMakeLists.txt  main.cpp
src/Math/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Ray.h  Ray.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.h  Vector3.hpp
src/Render/: CMakeLists.txt  Camera.h  Camera.hpp  Render.cpp  Render.h  Render.hpp
src/Scene/: CMakeLists.txt  CompositeDistanceEstimator.cpp  CompositeDistanceEstimator.hpp  CompositeObject.cpp  CompositeObject.hpp  DistanceEstimator.cpp  DistanceEstimator.hpp  Object.hpp  Scene.cpp  Scene.h  Scene.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  SphereDistanceEstimator.cpp  SphereDistanceEstimator.hpp  Torus.cpp  Torus.hpp  TorusDistanceEstimator.cpp  TorusDistanceEstimator.hpp
src/Scene/Objects/: CMakeLists.txt  Object.cpp  Object.h  Object.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  Torus.cpp  Torus.h  Torus.hpp
src/Window/: CMakeLists.txt  Window.h  Window.hpp
